Identifier Rework
- Add interfaces for new identifier implementations
- Add new factories for identifiers and some implementations
- Integrate new identifiers into existing structures
- Add InstructionApi to no longer access instructions via the identifiers
- Remove the old identifier implementations
- Remove DefaultListArgument in its entirety
- Adjust test to incorporate all aforementioned changes